add multi target option in ini

--- a/launchboxCleanUp/launchboxCleanUp.csproj
+++ b/launchboxCleanUp/launchboxCleanUp.csproj
@@ -50,6 +50,9 @@
   <PropertyGroup>
     <StartupObject>LaunchBoxCleanUp.Program</StartupObject>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>clean.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
@@ -81,6 +84,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="clean.ico" />
     <Content Include="_myFilter.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
